# libimagequant

./: CLAUDE.md  Cargo.toml
.github/workflows/: ci.yml
benches/: bench.rs  diff_bench.rs  simd_bench.rs
examples/: basic.rs  bench_simple.rs
imagequant-sys/: Cargo.toml  build.rs
imagequant-sys/c_test/: Cargo.toml
imagequant-sys/src/: ffi.rs
src/: attr.rs  blur.rs  capi.rs  hist.rs  image.rs  kmeans.rs  lib.rs  mediancut.rs  nearest.rs  pal.rs  quant.rs  rayoff.rs  remap.rs  rows.rs  seacow.rs  simd.rs
